GNOME Bugzilla – Bug 646631
GTK should use XDG base dir spec instead of home
Last modified: 2012-04-30 10:51:34 UTC
It would be good if the toolkit followed the XDG basedir spec for configuration files etc.
Created attachment 185056 [details] [review] Use XDG user config dir for bookmarks
Created attachment 185057 [details] [review] Try to load modules from user lib dir
Created attachment 185071 [details] [review] Try to load modules from user lib dir
Review of attachment 185056 [details] [review]: This doesn't makes sense without a migration story.
Review of attachment 185071 [details] [review]: There's no such thing as a user lib dir. And I'm opposed to introducing it.
Hence the depends on...
*** Bug 646509 has been marked as a duplicate of this bug. ***
Created attachment 212984 [details] [review] Don't load binary modules from the home directory by default We should rely on the module path environment variables being set correctly for the architecture rather than load from .gtk-3.0
Created attachment 212985 [details] [review] Migrate to XDG config dir for custom papers Will read from old location if new location isn't found but will only write to the new location.
Created attachment 212986 [details] [review] Try to load css themes from the XDG config directory first Will fall back to previous locations.
Created attachment 212987 [details] [review] Prefer xdg data directory to legacy .icons directory
Created attachment 212988 [details] [review] Migrate to XDG config dir for bookmarks Will read from old location if new location isn't found but will write it out to the new location.
Review of attachment 212984 [details] [review]: Looks ok to me. Can you start a 'Release notes for 3.6' section in README.in and mention this change there ?
Review of attachment 212985 [details] [review]: ::: gtk/gtkcustompaperunixdialog.c @@ +149,3 @@ + + filename = g_build_filename (g_get_user_config_dir (), + "gtk", Use gtk-3.0 here - we already use that directory elsewhere. @@ +255,3 @@ filename = custom_paper_get_filename (); + parentdir = g_build_filename (g_get_user_config_dir (), + "gtk", We already use ~/.config/gtk-3.0 for other config files - I suggest we stick to one directory.
Review of attachment 212986 [details] [review]: ::: gtk/gtkcssprovider.c @@ +2730,2 @@ */ + path = g_build_filename (g_get_user_config_dir (), "gtk", "themes", name, subpath, NULL); Shouldn't this be ~/.local/share/themes ? I think it should
Review of attachment 212987 [details] [review]: Ok
Review of attachment 212988 [details] [review]: ::: gtk/gtkfilesystem.c @@ +226,3 @@ + gchar *filename; + + filename = g_build_filename (g_get_user_config_dir (), "gtk", "bookmarks", NULL); ~/.config/gtk-3.0, please
Created attachment 213005 [details] [review] Migrate to XDG config dir for custom papers Will read from old location if new location isn't found but will only write to the new location.
Created attachment 213006 [details] [review] Try to load css themes from the XDG config directory first Will fall back to previous locations.
Created attachment 213007 [details] [review] Prefer xdg data directory to legacy .icons directory
Created attachment 213008 [details] [review] Migrate to XDG config dir for bookmarks Will read from old location if new location isn't found but will write it out to the new location.
Created attachment 213009 [details] [review] Mention XDG Base Dir migration in README for 3.6
Review of attachment 213005 [details] [review]: fine
Review of attachment 213006 [details] [review]: ok
Review of attachment 213007 [details] [review]: ok
Review of attachment 213008 [details] [review]: good
Review of attachment 213009 [details] [review]: ::: README.in @@ +77,3 @@ + +* Now follows the XDG Base Directory specification for user + configuration and data files. Could be a bit more concrete here, e.g. listing the new locations we look for, and also say that we still look in the old locations. But we can fix that up later
The following fixes have been pushed: 922b404 Mention XDG Base Dir migration in README for 3.6 ceb3fec Migrate to XDG config dir for bookmarks f10176e Prefer xdg data directory to legacy .icons directory 9f5e580 Try to load css themes from the XDG config directory first bbb7b29 Migrate to XDG config dir for custom papers fa0d612 Don't load binary modules from the home directory by default
Created attachment 213087 [details] [review] Mention XDG Base Dir migration in README for 3.6
Created attachment 213088 [details] [review] Migrate to XDG config dir for bookmarks Will read from old location if new location isn't found but will write it out to the new location.
Created attachment 213089 [details] [review] Prefer xdg data directory to legacy .icons directory
Created attachment 213090 [details] [review] Try to load css themes from the XDG config directory first Will fall back to previous locations.
Created attachment 213091 [details] [review] Migrate to XDG config dir for custom papers Will read from old location if new location isn't found but will only write to the new location.
Created attachment 213092 [details] [review] Don't load binary modules from the home directory by default We should rely on the module path environment variables being set correctly for the architecture rather than load from .gtk-3.0